fix wrapping of titles on publication page

--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -584,7 +584,6 @@ blockquote {
   font-size: 1.125rem;
   font-weight: 560;
   line-height: 1.35;
-  text-wrap: balance;
 }
 
 .publication-authors,
